--- a/Pages/Order/Food.cshtml
+++ b/Pages/Order/Food.cshtml
@@ -58,9 +58,9 @@
         cursor: pointer;
     }
 
-    input[type="submit"]:hover {
-        background-color: #0056b3;
-    }
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
 
     table {
         width: 45%;
@@ -90,17 +90,37 @@
     input[type="number"] {
         margin-right: 5px;
     }
+
+    .modal {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1000;
+        cursor: pointer;
+    }
+
+        .modal img {
+            max-width: 80%;
+            max-height: 80%;
+        }
 </style>
 
 <form method="post">
     <div style="display: flex; justify-content: space-between">
-        <table style="width:60%">
+        <table style="width:50%">
             <thead>
                 <tr>
                     <th>Danh mục</th>
                     <th>Món ăn</th>
-                    <th>Ảnh món ăn</th>
+                    <th style="width:140px">Ảnh món ăn</th>
                     <th>Số lượng</th>
+                    <th>Đơn giá</th>
                 </tr>
             </thead>
             <tbody>
@@ -108,8 +128,8 @@
                 {
                     @if (c.Foods.Count() != 0)
                     {
-                        <tr>
-                            <td colspan="3"><h3>@c.Name</h3></td>
+                        <tr style="background-color: #fff6da;">
+                            <td colspan="1"><h3 class="text-center">@c.Name</h3></td>
                         </tr>
                     }
 
@@ -123,9 +143,12 @@
                                     <input type="checkbox" id="food-@f.Id" name="foodId[]" value="@f.Id">
                                     <label for="food-@f.Id">@f.Name</label>
                                 </td>
-                                <td><img style="height:200px" src="@f.Image" /></td>
+                                <td><img class="food-image" style="height:120px;width:100%" src="@f.Image" /></td>
+                                <td style="width:100px">
+                                    <input style="width:100%" type="number" name="number_combo[]">
+                                </td>
                                 <td>
-                                    <input type="number" name="number_food[]">
+                                    <label for="food-@f.Id">@string.Format("{0:N0}", f.Price) VNĐ</label>
                                 </td>
                             </tr>
                         }
@@ -134,12 +157,13 @@
             </tbody>
         </table>
 
-        <table style="width:35%">
+        <table style="width:48%; height:fit-content">
             <thead>
                 <tr>
-                    <th>Combo</th>
+                    <th style="width:200px">Combo (tiết kiệm 10%)</th>
                     <th>Số lượng</th>
                     <th>Món ăn</th>
+                    <th>Đơn giá</th>
                 </tr>
             </thead>
             <tbody>
@@ -152,19 +176,24 @@
                                 <input type="checkbox" id="combo-@com.Id" name="comboId[]" value="@com.Id">
                                 <label for="combo-@com.Id">@com.Name</label>
                             </td>
-                            <td>
-                                <input type="number" name="number_combo[]">
+                            <td style="width:100px">
+                                <input style="width:100%" type="number" name="number_combo[]">
                             </td>
                             <td>
                                 <ul>
-                                    @foreach (var fb in Model.foodcombo)
-                                    {
-                                        if (@com.Id == fb.ComboId)
+                                    @{
+                                        int orderNumber = 1;
+                                        foreach (var fb in Model.foodcombo.Where(fc => fc.ComboId == com.Id).OrderBy(fc => fc.Food.Name))
                                         {
-                                            <li>@fb.Food.Name</li>
+                                            <li>@orderNumber. @fb.Food.Name</li>
+                                            orderNumber++;
                                         }
                                     }
                                 </ul>
+                            </td>
+
+                            <td>
+                                <label for="combo-@com.Id">@string.Format("{0:N0}", com.Price) VNĐ</label>
                             </td>
                         </tr>
                     }
@@ -173,8 +202,11 @@
         </table>
 
     </div>
-    <input style="margin-top:30px;" type="submit" value="Booking">
+    <input style="margin-top:30px;" type="submit" value="Booking" class="bg-danger">
 </form>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 <script>
     // Get all the checkboxes and corresponding quantity input fields
     const checkboxes = document.querySelectorAll('input[type="checkbox"]');
@@ -196,6 +228,40 @@
         // Add an event listener to each checkbox
         checkbox.addEventListener('change', function () {
             updateInputState(index);
+        });
+    });
+</script>
+<script>
+    // Function to handle image click and zoom
+    function zoomImage(imageSrc) {
+        // Create a modal for the zoomed image
+        var modal = document.createElement('div');
+        modal.classList.add('modal');
+
+        // Create an image element for the zoomed image
+        var zoomedImg = document.createElement('img');
+        zoomedImg.src = imageSrc;
+
+        // Append the zoomed image to the modal
+        modal.appendChild(zoomedImg);
+
+        // Append the modal to the body
+        document.body.appendChild(modal);
+
+        // Close the modal when clicking outside the image
+        modal.addEventListener('click', function () {
+            modal.remove();
+        });
+    }
+
+    // Attach click event listeners to all food images
+    document.addEventListener('DOMContentLoaded', function () {
+        var foodImages = document.querySelectorAll('.food-image');
+        foodImages.forEach(function (image) {
+            image.addEventListener('click', function () {
+                var imageSrc = this.src;
+                zoomImage(imageSrc);
+            });
         });
     });
 </script>
