--- a/wwwroot/css/Home.css
+++ b/wwwroot/css/Home.css
@@ -1,6 +1,7 @@
 ﻿body {
-    background-color:white
+    background-color: white
 }
+
 .header {
     margin-bottom: 50px;
 }
@@ -15,6 +16,7 @@
     width: 100%;
     height: 400px;
 }
+
 .ulheader {
     display: flex;
     justify-content: center;
@@ -76,14 +78,24 @@
     margin-bottom: 130px;
 }
 
+.fbrow {
+    /*background-color:aqua;*/
+    margin-left: 4px;
+}
+
 .textfeedback {
     /*background-color: red;*/
     font-family: 'Times New Roman';
 }
 
 .fb {
-    border-right: 1px solid red;
-    padding-right: 10px;
+    width: 30%;
+    margin: 20px;
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    background-color: #fff6da;
 }
 
     .fb p {
@@ -101,16 +113,32 @@
     border-radius: 10px;
 }
 
+.contactinfo {
+    /*background-color: red;*/
+}
+
+.headercontact {
+    /*background-color:yellow;*/
+    display: flex;
+    align-items: center;
+}
+
+    .headercontact a {
+        border-bottom: 1px solid red; /* Dấu sẽ là đường line */
+        width: 500px; /* Điều chỉnh chiều dài theo mong muốn */
+    }
+
 .contacttext {
     text-align: center;
-    border-right: 1px solid red;
     font-weight: bold;
+    /*background-color: pink;*/
 }
 
 .contactimg {
     display: flex;
     justify-content: center;
     align-items: center;
+    /*background-color: aqua;*/
 }
 
     .contactimg img {
